Fixed alignment

--- a/app/(pages)/product/styles.module.scss
+++ b/app/(pages)/product/styles.module.scss
@@ -11,6 +11,14 @@
   padding-bottom: 15vh;
 }
 
+.productSectionEmpty {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
+}
+
 .header {
   width: 100%;
   display: flex;
